static/css/base.css
:root {
  --white: #fff;
  --white-v2: #f2f1f9;
  --lavender-v2: #cbc7e5;
  --lavender-v3: #e5e2f3;
  --transparent: rgba(0, 0, 0, 0);

  --lavender: #beb9df;
  --lavender-80: rgba(190, 185, 223, 0.8);
  --lavender-60: rgba(190, 185, 223, 0.6);
  --lavender-40: rgba(190, 185, 223, 0.4);
  --lavender-20: rgba(190, 185, 223, 0.2);

  --dark-purple: #1b112d;
  --dark-purple-80: rgba(27, 17, 45, 0.8);
  --dark-purple-60: rgba(27, 17, 45, 0.6);
  --dark-purple-40: rgba(27, 17, 45, 0.4);
  --dark-purple-20: rgba(27, 17, 45, 0.2);
}

/* ------------- General Styles ------------- */

body {
  font-family: "Lato", sans-serif;
}

.bg-transparent {
  background-color: var(--transparent);
}

.bg-dp {
  background-color: var(--dark-purple) !important;
}

.bg-lv-80 {
  background-color: var(--lavender-80) !important;
}

.bg-lv-60 {
  background-color: var(--lavender-60) !important;
}

.bg-lv-40 {
  background-color: var(--lavender-40) !important;
}

.bg-lv-20 {
  background-color: var(--lavender-20) !important;
}

.text-dp {
  color: var(--dark-purple);
}

.text-lv {
  color: var(--lavender);
}

.header-displace {
  height: 72px;
}

/* ---------------- Navigation ---------------- */

.logo-text {
  font-family: "Petit Formal Script", cursive;
}

.search-btn {
  color: var(--transparent) !important;
  border-color: var(--transparent) !important;
}

.icon {
  align-items: center;
  display: inline-flex;
  justify-content: center;
  height: 2rem;
  width: 2rem;
}

#main-nav .container-fluid {
  padding-right: 0 !important;
}

#offer-banner h4 {
  margin-bottom: 0 !important;
}

/* ------------------------------- BS Navigation */

.navbar-toggler {
  border-color: var(--lavender) !important;
}

.dropdown-item:active {
  background-color: var(--lavender-60) !important;
}

#search-container .form-control {
  border: 0;
}

/* ---------------- Hero ---------------- */

section.hero {
  height: 49vw;
  background: var(--dark-purple-20) url("/static/img/hero.jpg");
  background-position: left;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}

.hero .btn-primary {
  border: 2px var(--lavender);
}

/* ---------------- Footer ---------------- */

.footer-heading {
  display: block;
  padding: 0.5rem 1rem;
  text-decoration: none;
  transition: none;
}

a.footer-heading:hover {
  color: var(--lavender);
}

.default-hr {
  width: 66vw;
  margin-top: 1rem;
  margin-bottom: 1rem;
  border: 0;
  border-top: 1px solid var(--lavender);
}

.btn-transparent {
  width: 66vw;
}

.btn-transparent .btn-check:focus + .btn,
.btn:focus {
  outline: 0;
  box-shadow: 0 0 0 0.25rem var(--lavender-40);
}

.btn-transparent:hover {
  color: var(--lavender) !important;
}

.btn-transparent h4 {
  margin-bottom: 0 !important;
}

@media only screen and (max-width: 576px) {
  .icon {
    height: 1.5rem;
    width: 1.5rem;
  }
}

@media only screen and (max-width: 426px) {
  .header-displace {
    height: 66px;
  }
}

